--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cssselect2==0.4.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.1
-django-heroku==0.3.1
+django-environ=0.10.0
 django-mathfilters==1.0.0
 future==0.18.2
 gunicorn==20.1.0
