--- a/requirements.txt
+++ b/requirements.txt
@@ -8,19 +8,22 @@ cssselect2==0.4.1
 defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.1
-django-environ=0.10.0
+django-environ==0.10.0
+django-heroku==0.3.1
 django-mathfilters==1.0.0
 future==0.18.2
 gunicorn==20.1.0
 html5lib==1.1
-Pillow
-psycopg2==2.8.6
+image==1.5.33
+Pillow==9.2.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycairo==1.20.1
 pycparser==2.20
 PyPDF2==1.26.0
 pyphen==0.11.0
 python-bidi==0.4.2
-pytz
+pytz==2022.1
 reportlab==3.5.67
 simplejson==3.17.2
 six==1.16.0
@@ -30,4 +33,3 @@ WeasyPrint==52.5
 webencodings==0.5.1
 whitenoise==5.3.0
 xhtml2pdf==0.2.5
-
