--- a/ramea/.env
+++ b/ramea/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgres://ramea_db_user:xN5X0KSuzcUrZpvaEg1coO4H1AVl9SOi@dpg-cjlj9tnv9s6c73elpgpg-a.oregon-postgres.render.com/ramea_db
+EMAIL_HOST_PASSWORD='3SVv3@&Go2K*5M5QR#95!f^!n#4'
